# ecal_learning

./: .gitignore  ecal_note.md  readme.md
demos/00_protobuf_cmake_example/: CMakeLists.txt  main.cpp
demos/00_protobuf_cmake_example/proto/: message.proto
demos/00_protobuf_cmake_example/readme/: Language Guide (proto3)  _  Protocol Buffers  _  Google Developers.mhtml  一文读懂——Protobuf - 知乎.mhtml
demos/01-ecal-helloworld/: CMakeLists.txt
demos/01-ecal-helloworld/src/: helloworld_puber.cpp  helloworld_suber.cpp  main.cpp
demos/01_ecal_helloworld/: CMakeLists.txt
demos/02-ecal-helloworld-protobuf/: CMakeLists.txt
demos/02-ecal-helloworld-protobuf/proto/: hello_world.proto
demos/02-ecal-helloworld-protobuf/src/: helloworld_proto_puber.cpp  helloworld_proto_suber.cpp
demos/02_ecal_helloworld_protobuf/src/: helloworld_proto_puber.cpp  helloworld_proto_suber.cpp
demos/03_mininal_service/: CMakeLists.txt
demos/03_mininal_service/src/: minimal_client.cpp  minimal_client_block.cpp  minimal_client_callback.cpp  minimal_server.cpp
demos/04-math-service/src/: math_server.cpp
demos/04_math_service/: CMakeLists.txt  readme.md
demos/04_math_service/proto/: math_service.proto
demos/04_math_service/src/: math_client.cpp  math_server.cpp
demos/05-protobuf_cmake_example/: main.cpp
demos/05_ping_service/: CMakeLists.txt
demos/05_ping_service/proto/: ping_service.proto
demos/05_ping_service/src/: ping_client.cpp  ping_server.cpp
demos/06_ecal_binary/: CMakeLists.txt
demos/06_ecal_binary/src/: binary_rec.cpp  binary_snd.cpp
demos/07-ecal-camera-samples/: CMakeLists.txt
demos/07-ecal-camera-samples/camera_receiver_mon_plugin/src/: plugin.h  plugin_widget.h
demos/07-ecal-camera-samples/ecal_camera_snd/: camera_wrapper.h  camera_wrapper_with_fps_control.h
demos/07_ecal_camera_samples/camera_receiver_mon_plugin/src/: plugin.cpp  plugin_widget.cpp
demos/07_ecal_camera_samples/ecal_camera_snd/: camera_wrapper.cpp  camera_wrapper_with_fps_control.cpp
demos/08_ecal_cvmat_protobuf/: CMakeLists.txt
demos/08_ecal_cvmat_protobuf/proto/: cvmat.proto  cvmatArray.proto
demos/08_ecal_cvmat_protobuf/src/: cvmat_proto_puber.cpp  cvmat_proto_suber.cpp
demos/09_ecal_pcl_pointcloud_protobuf/: CMakeLists.txt
demos/09_ecal_pcl_pointcloud_protobuf/proto/: pcl_pointcloud_xyz.proto
demos/09_ecal_pcl_pointcloud_protobuf/src/: pcl_protobuf_puber.cpp  pcl_protobuf_suber.cpp
ecal_sys_gui_config/: ecal_sys_gui_test.ecalsys
